Upgrade to Infinispan 12.1.4.Final

--- a/infinispan-client-quickstart/src/main/resources/application.properties
+++ b/infinispan-client-quickstart/src/main/resources/application.properties
@@ -5,8 +5,8 @@ quarkus.infinispan-client.server-list=localhost:11222
 # Auth
 quarkus.infinispan-client.auth-server-name=infinispan
 quarkus.infinispan-client.auth-realm=default
-quarkus.infinispan-client.auth-username=Titus Bramble
-quarkus.infinispan-client.auth-password=Shambles
+quarkus.infinispan-client.auth-username=admin
+quarkus.infinispan-client.auth-password=password
 quarkus.infinispan-client.sasl-mechanism=DIGEST-MD5
 
 ## Docker 4 Mac workaround
